<resources>
    <string name="app_name">OlaVilaboaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OlaVilaboaApp</string>
    <string name="nav_header_subtitle">ml.patri@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">INICIO</string>
    <string name="menu_tourism">TURISMO</string>
    <string name="menu_news">NOVAS</string>
    <string name="menu_culture">CULTURA</string>
    <string name="menu_eat">ONDE COMER</string>
    <string name="menu_sleep">ONDE DURMIR</string>
    <string name="menu_about">INFO DA APP</string>

    <string name="desc_home">Hola, usuario. Nesta pantalla de INICIO recibirás as notificacións máis recentes.</string>
    <string name="desc_tourism">Hola, usuario. Nesta pantalla de TURISMO terás info sobre lugares a visitar.</string>
    <string name="desc_news">Hola, usuario. Nesta pantalla de NOVAS terás a actualidade de Vilaboa.</string>
    <string name="desc_culture">Hola, usuario. Nesta pantalla de CULTURA terás eventos culturais do concello.</string>
    <string name="desc_eat">Hola, usuario. Nesta pantalla de ONDE COMER obterás info sobre onde comer en Vilaboa.</string>
    <string name="desc_sleep">Hola, usuario. Nesta pantalla de ONDE DURMIR obterás info sobre onde durmir en Vilaboa.</string>
    <string name="desc_about">Hola, usuario. Nesta pantalla de INFO DA APP coñecerás as seccións da app.</string>
    <string name="title_activity_container_info">ContainerInfoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_container_about">ContainerAboutActivity</string>


</resources>