<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/nav_tourism"
            android:icon="@drawable/mapa"
            android:title="@string/menu_tourism" />
        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/culture"
            android:title="CULTURA" />

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/festas"
            android:title="FESTAS" />

        <item
            android:id="@+id/nav_eat"
            android:icon="@drawable/tenda"
            android:title="ONDE COMER" />
        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/sleep"
            android:title="@string/menu_sleep" />

       <!-- <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/mensaxes"
            android:title="@string/menu_messages" /> -->

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />






    </group>
</menu>